--- a/index.css
+++ b/index.css
@@ -207,7 +207,7 @@
 }
 
 @media screen and (max-width:400px ) {
-    #home {
+    home {
         margin-top: -100px;
     }
 }
@@ -676,6 +676,7 @@ img {
     #testimonials {
         width: 470px;
         margin-left: 10px;
+        margin-top: 400px;
     }
 }
 
@@ -688,14 +689,14 @@ img {
 
 @media screen and (max-width:1000px ) {
     .testimonials {
-        margin-left: -220px;
+        margin-left: 0px;
     }
 }
 
 @media screen and (max-width:400px ) {
     .testimonials {
         width: 680px;
-        margin-left: -250px;
+        margin-left: 0px;
     }
 }
 
