--- a/index.css
+++ b/index.css
@@ -207,8 +207,8 @@
 }
 
 @media screen and (max-width:400px ) {
-    home {
-        margin-top: -100px;
+    #home {
+        margin-top: 10px;
     }
 }
 h2
@@ -400,7 +400,11 @@ img {
         margin-top: -40px;
     }
 }
-
+@media screen and (max-width:400px ) {
+    #about-us {
+        margin-top: 140px;
+    }
+}
 #about-us h1 {
     margin-top: 30px;
 }
@@ -561,7 +565,7 @@ img {
 
 @media screen and (max-width:400px ) {
     #templates {
-        height: 700px;
+        height: 1700px;
     }
 }
 
