--- a/index.css
+++ b/index.css
@@ -261,7 +261,7 @@ h1:hover {
 }
 @media screen and (max-width:400px ) {
     .wrap {
-        margin-top: 100px;
+        margin-top: 50px;
         margin-left: 100px;
     }
 }
@@ -405,6 +405,11 @@ img {
         margin-top: 140px;
     }
 }
+@media screen and (max-width:400px ) {
+    .about-us {
+        margin-top: 40px;
+    }
+}
 #about-us h1 {
     margin-top: 30px;
 }
@@ -444,6 +449,7 @@ img {
 @media screen and (max-width:1000px ) {
     .aboutus img {
         margin-left: -450px;
+        margin-top: 0px;
     }
 }
 
@@ -681,6 +687,7 @@ img {
         width: 470px;
         margin-left: 10px;
         margin-top: 400px;
+        height: 1000px;
     }
 }
 
