--- a/index.css
+++ b/index.css
@@ -409,7 +409,8 @@ img {
 }
 @media screen and (max-width:400px ) {
     #about-us {
-        margin-top: 140px;
+        margin-top: 40px;
+        height:900px;
     }
 }
 @media screen and (max-width:400px ) {
@@ -568,7 +569,7 @@ img {
 /*---templates----*/
 #templates {
     height: 1300px;
-    margin-top: 100px;
+    margin-top: 100px;background-color:red;
 }
 
 #templates {
@@ -649,8 +650,8 @@ img {
 
 @media screen and (max-width:400px ) {
     .template img {
-        margin-top: -10px;
-        margin-left: 30px;
+        margin-top: -30px;
+        margin-left: 20px;
     }
 }
 
@@ -671,7 +672,7 @@ img {
 
 @media screen and (max-width:400px ) {
     .template p {
-        margin-top: -10px;
+        margin-top: -20px;
     }
 }
 /*----testimonials-------*/
@@ -679,7 +680,7 @@ img {
 #testimonials {
     height: 800px;
     margin-top: 0px;
-    width: 100%;
+    width: 100%;background-color:red;
 }
 
 #testimonials {
@@ -699,7 +700,7 @@ img {
         width: 470px;
         margin-left: 10px;
         margin-top: 400px;
-        height: 1000px;
+        height: 1200px;
     }
 }
 
@@ -764,12 +765,15 @@ img {
 #contacts {
     margin-left: 10px;
     margin-top: 100px;
-    height:500px;
+    height:500px;background-color:red;
 }
 
 @media screen and (max-width:400px ) {
     #contacts {
         width: 480px;
+        margin-top: 200px;
+        height:800px;
+        
     }
 }
 
