--- a/index.css
+++ b/index.css
@@ -415,7 +415,7 @@ img {
 }
 @media screen and (max-width:400px ) {
     .about-us {
-        margin-top: 40px;
+        margin-top: 100px;
     }
 }
 #about-us h1 {
@@ -430,7 +430,7 @@ img {
     margin-left: 50px;
     font-size: 16px;
     margin-top: -10px;
-    text-align:center;background-color:red;
+    text-align:center;background-color:green;
 }
 
 @media screen and (max-width:1000px ) {
@@ -672,7 +672,7 @@ img {
 
 @media screen and (max-width:400px ) {
     .template p {
-        margin-top: -20px;
+        margin-top: -10px;
     }
 }
 /*----testimonials-------*/
@@ -700,7 +700,7 @@ img {
         width: 470px;
         margin-left: 10px;
         margin-top: 400px;
-        height: 1700px;
+        height: 1600px;
     }
 }
 
