--- a/index.css
+++ b/index.css
@@ -174,7 +174,11 @@
         color: var(--hover-color);
         text-shadow: 0 0 10px rgba(18,247,255,0.6), 0 0 20px rgba(118,247,255,0.6), 0 0 30px rgba(18,247,255,0.6), 0 0 40px rgba(18,247,255,0.6), 0 0 70px rgba(18,247,255,0.6), 0 0 80px rgba(18,247,255,0.6), 0 0 100px rgba(18,247,255,0.6), 0 0 150px rgba(18,247,255,0.6);
     }
-
+@media screen and (max-width:1000px ) {
+    .aopenbtn {
+        float:right;
+    }
+}
 @media screen and (max-width:1000px ) {
     .header h2 {
         margin-left: 10px;
@@ -423,6 +427,12 @@ img {
 }
 .about-us{
     margin-top:50px;
+}
+@media screen and (max-width:400px ) {
+    .about-us{
+        margin-top: 100px;
+       
+    }
 }
 .aboutus-box {
     display: inline-block;
