--- a/index.css
+++ b/index.css
@@ -697,7 +697,7 @@ img {
 #testimonials {
     height: 800px;
     margin-top: 0px;
-    width: 100%;background-color:red;
+    width: 100%;
 }
 
 #testimonials {
@@ -716,7 +716,7 @@ img {
     #testimonials {
         width: 470px;
         margin-left: 10px;
-        margin-top: 200px;
+        margin-top: 100px;
         height: 1540px;
     }
 }
@@ -782,7 +782,7 @@ img {
 #contacts {
     margin-left: 10px;
     margin-top: 100px;
-    height:500px;background-color:red;
+    height:500px;
 }
 
 @media screen and (max-width:400px ) {
