--- a/index.css
+++ b/index.css
@@ -274,6 +274,7 @@ h1:hover {
     .wrap {
         margin-top: 0px;
         margin-left: 100px;
+        display:none;
     }
 }
 
@@ -585,7 +586,7 @@ img {
 /*---templates----*/
 #templates {
     height: 1300px;
-    margin-top: 100px;background-color:red;
+    margin-top: 100px;
 }
 
 #templates {
