--- a/index.css
+++ b/index.css
@@ -212,7 +212,7 @@
 
 @media screen and (max-width:400px ) {
     #home {
-        margin-top: 10px;
+        margin-top: 10px;display: none;
         
     }
 }
