--- a/index.css
+++ b/index.css
@@ -698,7 +698,7 @@ img {
     height: 800px;
     margin-top: 0px;
     width: 100%;
-    background-image:red;
+    background-color:red;
 }
 
 #testimonials {
