--- a/index.css
+++ b/index.css
@@ -698,7 +698,7 @@ img {
     height: 800px;
     margin-top: 0px;
     width: 100%;
-    background-color:red;
+    
 }
 
 #testimonials {
@@ -726,7 +726,7 @@ img {
 
 .testimonials {
     margin-left:50px;
-    margin-top:50px;
+    margin-top:50px;background-color:red;
 }
 
 @media screen and (max-width:1000px ) {
@@ -748,7 +748,7 @@ img {
     padding: 10px;
     margin-left: 10px;
     width:410px;
-    height:350px;
+    height:350px;background-color:blue;
 }
     .testimonial:hover {
         border: 2px solid var(--hover-color);
@@ -765,7 +765,7 @@ img {
     color: #0cbef5;
     font-size: 18px;
     text-align: center;
-    margin-top: 20px;
+    margin-top: 20px;background-color:pink;
 }
 
 @media screen and (max-width:1000px ) {
@@ -777,7 +777,7 @@ img {
 .testimonials p {
     width: 340px;
     padding:10px;
-    margin-left:30px;
+    margin-left:30px;background-color:grey;
 }
 /*---contacts-----*/
 #contacts {
