--- a/index.css
+++ b/index.css
@@ -726,7 +726,7 @@ img {
 
 .testimonials {
     margin-left:50px;
-    margin-top:50px;background-color:red;
+    margin-top:50px;
 }
 
 @media screen and (max-width:1000px ) {
@@ -737,7 +737,7 @@ img {
 
 @media screen and (max-width:400px ) {
     .testimonials {
-        width: 680px;
+        width: 490px;
         margin-left: 0px;
     }
 }
@@ -748,7 +748,7 @@ img {
     padding: 10px;
     margin-left: 10px;
     width:410px;
-    height:350px;background-color:blue;
+    height:350px;
 }
     .testimonial:hover {
         border: 2px solid var(--hover-color);
@@ -765,7 +765,7 @@ img {
     color: #0cbef5;
     font-size: 18px;
     text-align: center;
-    margin-top: 20px;background-color:pink;
+    margin-top: 20px;
 }
 
 @media screen and (max-width:1000px ) {
@@ -777,7 +777,7 @@ img {
 .testimonials p {
     width: 340px;
     padding:10px;
-    margin-left:30px;background-color:grey;
+    margin-left:30px;
 }
 /*---contacts-----*/
 #contacts {
