--- a/index.css
+++ b/index.css
@@ -750,6 +750,16 @@ img {
     width:410px;
     height:350px;
 }
+@media screen and (max-width:1000px ) {
+    .testimonial{
+        margin-left: 30px;
+    }
+}
+@media screen and (max-width:400px ) {
+    .testimonial{
+        margin-left: 30px;
+    }
+}
     .testimonial:hover {
         border: 2px solid var(--hover-color);
         box-shadow: 0 0 1rem #0cbef5;
@@ -773,11 +783,26 @@ img {
         margin-left: 0px;
     }
 }
+@media screen and (max-width:400px ) {
+    .testimonials h6 {
+        margin-left: 0px;
+    }
+}
 
 .testimonials p {
     width: 340px;
     padding:10px;
     margin-left:30px;
+}
+@media screen and (max-width:1000px ) {
+    .testimonials p {
+        margin-left: 50px;
+    }
+}
+@media screen and (max-width:1000px ) {
+    .testimonials h6 {
+        margin-left: 50px;
+    }
 }
 /*---contacts-----*/
 #contacts {
