--- a/index.css
+++ b/index.css
@@ -92,7 +92,7 @@
 
 @media screen and (max-width:400px ) {
     .menu {
-        display:none;
+        display: none;
     }
 }
 .menu a {
@@ -174,11 +174,7 @@
         color: var(--hover-color);
         text-shadow: 0 0 10px rgba(18,247,255,0.6), 0 0 20px rgba(118,247,255,0.6), 0 0 30px rgba(18,247,255,0.6), 0 0 40px rgba(18,247,255,0.6), 0 0 70px rgba(18,247,255,0.6), 0 0 80px rgba(18,247,255,0.6), 0 0 100px rgba(18,247,255,0.6), 0 0 150px rgba(18,247,255,0.6);
     }
-@media screen and (max-width:400px ) {
-    .openbtn {
-        float:right;
-    }
-}
+
 @media screen and (max-width:1000px ) {
     .header h2 {
         margin-left: 10px;
@@ -212,14 +208,7 @@
 
 @media screen and (max-width:400px ) {
     #home {
-        margin-top: 10px;
-        
-    }
-}
-@media screen and (max-width:400px ) {
-    .home {
-        margin-top: 10px;
-        width:490px;
+        margin-top: -100px;
     }
 }
 h2
@@ -266,18 +255,16 @@ h1:hover {
 
 @media screen and (max-width:1000px ) {
     .wrap {
-        margin-top: 0px;
+        margin-top: 300px;
         margin-left: 500px;
     }
 }
 @media screen and (max-width:400px ) {
     .wrap {
-        margin-top: 0px;
+        margin-top: 100px;
         margin-left: 100px;
-       
     }
 }
-
 .wrap-box {
     margin-left: -100px;
 }
@@ -412,28 +399,12 @@ img {
         margin-top: -40px;
     }
 }
-@media screen and (max-width:400px ) {
-    #about-us {
-        margin-top: 40px;
-        height:900px;
-    }
-}
-@media screen and (max-width:400px ) {
-    .about-us {
-        margin-top: 200px;
-    }
-}
+
 #about-us h1 {
     margin-top: 30px;
 }
 .about-us{
     margin-top:50px;
-}
-@media screen and (max-width:400px ) {
-    .about-us{
-        margin-top: 100px;
-       
-    }
 }
 .aboutus-box {
     display: inline-block;
@@ -468,23 +439,16 @@ img {
 @media screen and (max-width:1000px ) {
     .aboutus img {
         margin-left: -450px;
-        margin-top: 0px;
     }
 }
 
-@media screen and (max-width:400px ) {
-    .aboutus img {
-        margin-left: -450px;
-        margin-top: 100px;
-    }
+.aboutus-box p:hover 
+{
+	    text-shadow: 0 0 10px rgba(18,247,255,0.6), 0 0 20px rgba(118,247,255,0.6), 0 0 30px rgba(18,247,255,0.6), 0 0 40px rgba(18,247,255,0.6), 0 0 70px rgba(18,247,255,0.6), 0 0 80px rgba(18,247,255,0.6), 0 0 100px rgba(18,247,255,0.6), 0 0 150px rgba(18,247,255,0.6);
+	color: var(--hover-color);
+	
 }
-@media screen and (max-width:400px ) {
-    .aboutus  {
-        margin-left: -550px;
-        margin-top: 200px;
-        height:400px;
-    }
-}
+
 
 
 
@@ -601,7 +565,7 @@ img {
 
 @media screen and (max-width:400px ) {
     #templates {
-        height: 2000px;
+        height: 700px;
     }
 }
 
@@ -667,8 +631,8 @@ img {
 
 @media screen and (max-width:400px ) {
     .template img {
-        margin-top: -30px;
-        margin-left: 20px;
+        margin-top: -10px;
+        margin-left: 30px;
     }
 }
 
@@ -683,13 +647,13 @@ img {
 
 @media screen and (max-width:1000px ) {
     .template p {
-        margin-top: 10px;
+        margin-top: -10px;
     }
 }
 
 @media screen and (max-width:400px ) {
     .template p {
-        margin-top: 10px;
+        margin-top: -10px;
     }
 }
 /*----testimonials-------*/
@@ -698,7 +662,6 @@ img {
     height: 800px;
     margin-top: 0px;
     width: 100%;
-    
 }
 
 #testimonials {
@@ -717,8 +680,6 @@ img {
     #testimonials {
         width: 470px;
         margin-left: 10px;
-        margin-top: 100px;
-        height: 1540px;
     }
 }
 
@@ -731,14 +692,14 @@ img {
 
 @media screen and (max-width:1000px ) {
     .testimonials {
-        margin-left: 0px;
+        margin-left: -220px;
     }
 }
 
 @media screen and (max-width:400px ) {
     .testimonials {
-        width: 490px;
-        margin-left: 0px;
+        width: 680px;
+        margin-left: -250px;
     }
 }
 
@@ -749,16 +710,6 @@ img {
     margin-left: 10px;
     width:410px;
     height:350px;
-}
-@media screen and (max-width:1000px ) {
-    .testimonial{
-        margin-left: 30px;
-    }
-}
-@media screen and (max-width:400px ) {
-    .testimonial{
-        margin-left: 30px;
-    }
 }
     .testimonial:hover {
         border: 2px solid var(--hover-color);
@@ -783,26 +734,11 @@ img {
         margin-left: 0px;
     }
 }
-@media screen and (max-width:400px ) {
-    .testimonials h6 {
-        margin-left: 0px;
-    }
-}
 
 .testimonials p {
     width: 340px;
     padding:10px;
     margin-left:30px;
-}
-@media screen and (max-width:1000px ) {
-    .testimonials p {
-        margin-left: 50px;
-    }
-}
-@media screen and (max-width:1000px ) {
-    .testimonials h6 {
-        margin-left: 50px;
-    }
 }
 /*---contacts-----*/
 #contacts {
@@ -814,9 +750,6 @@ img {
 @media screen and (max-width:400px ) {
     #contacts {
         width: 480px;
-        margin-top: 100px;
-        height:700px;
-        
     }
 }
 
